--- a/index.html
+++ b/index.html
@@ -66,14 +66,13 @@
       <div class="row text-center">
         <div class="col-sm-12">
           <h3 class="judul1" style="font-size: 28px" data-aos="fade-down-right" data-aos-delay="1000"
-            data-aos-duration="1150">~ Kepada ~ <p id="mhs">Orang Tua / Wali</p>
-          </h3>
+            data-aos-duration="1150">~ Kepada ~ 
         </div>
       </div>
       <div class="row text-center">
         <div class="col-sm-12">
           <h3 id="undang" class="judul1" style="font-size: 46px" data-aos="fade-down-right" data-aos-delay="1000"
-            data-aos-duration="1150">Nama lengkap</h3>
+            data-aos-duration="1150">Bapak/Ibu Dosen dan Tendik di Jurusan Teknik Informatika</h3>
         </div>
 
         <div class="col-sm-12 text-center">
@@ -169,11 +168,12 @@
             2. DOA Pembukaan<br>
             3. Menyanyikan Lagu Indonesia Raya <br>
             4. Menyanyikan Lagu Hymne UNIPA <br>
-            5. Pesan dan Kesan <br>
-            6. Sambutan <br>
-            7. Menyanyikan Lagu Papua Pulau Indah <br>
-            8. Foto Bersama <br>
-            9. Penutup <br>
+            5. Persembahan dari Wisudawan<br>
+            6. Pesan dan Kesan <br>
+            7. Sambutan <br>
+            8. Menyanyikan Lagu Papua Pulau Indah <br>
+            9. Foto Bersama <br>
+            10. Penutup <br>
           </h4>
         </div>
       </div>
@@ -242,10 +242,10 @@
 
   <footer class="text-center">
     <p>Panitia Ramah Tamah Sarjana & Diploma <a href="https://ft.unipa.ac.id/" target="_blank">Fakultas Teknik</a> UNIPA
-      2023/2024</p>
+      2024/2025</p>
   </footer>
 
-  <!-- Modal -->
+  <!-- Modal
   <div class="modal" id="idModal" tabindex="-1" aria-labelledby="idModalLabel" aria-hidden="true"
     data-bs-backdrop="static" data-bs-keyboard="false">
     <div class="modal-dialog modal-dialog-centered">
@@ -263,7 +263,7 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
@@ -274,7 +274,7 @@
     AOS.init();
   </script>
 
-  <script>
+  <!-- <script>
     function GetURLParameter(sParam) {
       var sPageURL = window.location.search.substring(1);
       var sURLVariables = sPageURL.split('&');
@@ -286,7 +286,9 @@
       }
     }
     let undang = {
-      202407290: 'Staf, Dosen dan Tendik Fakultas Teknik UNIPA',
+      1: 'Bapak/Ibu Dosen dan Tendik di Jurusan Teknik Informatika',
+      2: 'Bapak/Ibu Dosen dan Tendik di Jurusan Teknik Elektro',
+      3: 'Bapak/Ibu Dosen dan Tendik di Jurusan Teknik Sipil',
       201865046: 'AHMAD SAFITRI SABAN',
       202065071: 'Merlyn Florensia Sahetapi',
       201965009: 'PETRUS ROIROGHEL SANOY',
@@ -370,7 +372,7 @@
     var id = GetURLParameter('id');
     document.getElementById("undang").innerHTML = undang[id];
 
-    if (id == "202407290") {
+    if (id == "1") {
       document.getElementById("mhs").innerHTML = "";
     } else {
       document.getElementById("mhs").innerHTML = "Orang Tua / Wali";
@@ -380,7 +382,11 @@
     // Modal Box 
     // =========
     // Fungsi untuk mengirimkan form dan mengalihkan ke URL dengan parameter ID
-    const validIDs = ["201865046",
+    const validIDs = [
+      "1",
+      "2",
+      "3",
+      "201865046",
       "202065071",
       "201965009",
       "202079005",
@@ -487,7 +493,7 @@
 
     // Panggil fungsi showIDModal saat halaman selesai dimuat
     document.addEventListener("DOMContentLoaded", showIDModal);
-  </script>
+  </script> -->
 </body>
 
 </html>
