--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       <div class="row text-center">
         <div class="col-sm-12">
           <h3 id="undang" class="judul1" style="font-size: 46px" data-aos="fade-down-right" data-aos-delay="1000"
-            data-aos-duration="1150">Bapak/Ibu Dosen dan Tendik di Jurusan Teknik Sipil</h3>
+            data-aos-duration="1150">Bapak/Ibu Dosen dan Tendik di Jurusan Teknik Elektro</h3>
         </div>
 
         <div class="col-sm-12 text-center">
